@@ -216,7 +216,10 @@ HISTORY
 
   ++ Bugfixes:
 
-  2015-03-19: Simon Goldschmidt
+  2015-03-20: Simon Goldschmidt
+  * dhcp.c: fixed bug #38714 (Missing option and client address in DHCPRELEASE message)
+
+  2015-03-20: Simon Goldschmidt
   * dhcp.c: fixed bug #38203 (DHCP options are not recorded in all DHCP ack messages)
 
   2015-03-19: Simon Goldschmidt
